--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Nitish Kumar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,27 +12,26 @@
 </body>
 </html>
 <header>
-  <h1>Website</h1>
+  <h1>Nitish Kumar</h1>
 </header>
 
 <nav>
   <ul>
-    <li><a href="#section-1">Section 1</a></li>
-    <li><a href="#section-2">Section 2</a></li>
-    <li><a href="#section-3">Section 3</a></li>
-    <li><a href="#section-4">Section 4</a></li>
-    <li><a href="#section-5">Section 5</a></li>
-    <li><a href="#section-6">Section 6</a></li>
-    <li><a href="#section-7">Section 7</a></li>
-    <li><a href="#section-8">Section 8</a></li>
-    <li><a href="#section-9">Section 9</a></li>
+    <li><a href="#section-1">Home</a></li>
+    <li><a href="#section-3">Education</a></li>
+    <li><a href="#section-4">Interests</a></li>
+    <li><a href="#section-5">Extra-curricular Acitivities</a></li>
+    <li><a href="#section-7">References</a></li>
+    <li><a href="#section-8">Contact me</a></li>
   </ul>
 </nav>
 
 <main>
   <section id="section-1">
-    <h1>Section 1</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+    <h1>Home</h1>
+    <p>Hi! This is my webpage, and my name is Nitish Kumar.</p>
+<p> I am a final year student at the <a href ="https://www.iiserb.ac.in"> Indian Institute of Science Education and Research  <\p>,<br>
+  where I am working with Dr. Jyoti Prakash Saha and Dr. Rahul Garg on my master's thesis titled "Higher Order Fourier Analysis". 
   </section>
   <section id="section-2">
     <h1>Section 2</h1>
