--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <section id="section-1">
     <h1>Home</h1>
     <p>Hi! This is my webpage, and my name is Nitish Kumar.</p>
-<p> I am a final year student at the <a href ="https://www.iiserb.ac.in"> Indian Institute of Science Education and Research  <\p>,<br>
-  where I am working with Dr. Jyoti Prakash Saha and Dr. Rahul Garg on my master's thesis titled "Higher Order Fourier Analysis". 
+<p> I am a final year student at the <a href ="https://www.iiserb.ac.in"> Indian Institute of Science Education and Research </a> ,<br>
+  where I am working with Dr. Jyoti Prakash Saha and Dr. Rahul Garg on my master's thesis titled "Higher Order Fourier Analysis". <\p>
   </section>
   <section id="section-2">
     <h1>Section 2</h1>
