--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#section-3">Contact Info</a></li>
 
     <li><a href="#section-4">Education</a></li>
-    <li><a href="#section-5">Extra-curricular Acitivities</a></li>
+    <li><a href="#section-5">Extra-curricular Activities</a></li>
     <li><a href="#section-7">References</a></li>
   </ul>
 </nav>
@@ -61,10 +61,9 @@
     <p>Pursuing BS-MS Dual Degree at Indian Institute of Science Education and Research, Bhopal </p>
     <p> Completed my Higher Secondary Education from Kendriya Vidyalaya No.1, Kochi </p>
   </section>
-  <section id="section-4">
    
   <section id="section-5">
-    <h1>Extra-curricular activities</h1>
+    <h1>Extra-curricular Activities</h1>
     <p>Mentor at <a href="https://unacademy.com"> Unacademy </a> (online learning platform) since Oct 2021 : helping students and giving the strategies to crack competitive exams. </p>
     <p> Chegg Subject Matter Expert (Advanced Mathematics) since May 2021. </p>
     <p> Coordinated events held in Continuum (2020, 2021), the annual event held by Dept. of Mathematics, IISER Bhopal </p>
