--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <ul>
     <li><p>Pursuing BS-MS Dual Degree at Indian Institute of Science Education and Research, Bhopal </p></li>
 
-      <li><p> Completed my Higher Secondary Education from Kendriya Vidyalaya No.1, Kochi </p></li>
+      <li><p>Higher Secondary Education from Kendriya Vidyalaya No.1, Kochi </p></li>
     </ul>
   </section>
      <section id="section-5">
