--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
   </p>
     <p> A copy of the synopsis can be found <a href="https://drive.google.com/file/d/1lCiGHhSzWBNQoAoAtNHJBMO71Sz70-QR/view?usp=sharing">here</a>.</p>
     <p> My research interest lies in Additive Combinatorics and Analytic Number theory. </p>
-    <p>Here is my <a href="https://drive.google.com/file/d/1HFC9SD7IL1YbLmZ4303NLsI5z2bOhXpQ/view?usp=sharing"> Curriculum Vitae</a> <br>
-      and a list of <a href =" "> seminars</a> attended.</p>
+    <p>Here is my <a href="https://drive.google.com/file/d/1HFC9SD7IL1YbLmZ4303NLsI5z2bOhXpQ/view?usp=sharing"> Curriculum Vitae</a>. </p>
   </section>
   
     <section id="section-2">
